--- a/styles.css
+++ b/styles.css
@@ -62,8 +62,7 @@ html, body {
 .arrow{
     height: 22px;
     width: auto;
-    grid-column: -2/-1;
-    grid-row: 3/4;
+    
     margin-bottom: 10px;
     margin-right: 4px;
     z-index: 99;
@@ -71,13 +70,18 @@ html, body {
     align-self: center;
     justify-self: self-end;
 }
+.arrow_holder{
+    grid-column: -2/-1;
+    grid-row: 3/4;
+    border-style: none;
+    background-color: #efefef;
+    margin-left: -80px;
+}
 .arrow_turn{
     height: 22px;
     width: auto;
-    grid-column: -2/-1;
-    grid-row: 3/4;
     margin-bottom: 10px;
-    margin-right: 13px;
+    margin-right: 4px;
     z-index: 99;
     transform: rotate(-90deg);
     align-self: center;
