--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,9 @@ html, body {
     grid-row: 2/3;
     margin-top: -4px;
 }
+.socme_icon{
+    padding: 5px;
+}
 .red_line{
     grid-column: 3/4;
     grid-row: 1/4;
@@ -267,6 +270,14 @@ html, body {
     width: 100%;
 }
 .socme_holder{
+    grid-row: 7/9;
+    grid-column: 1/-1;
+    justify-self: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+}
+.socme_holder_two{
     grid-row: 7/9;
     grid-column: 1/-1;
     justify-self: center;
@@ -832,7 +843,7 @@ html, body {
     border: 15px solid #FF3B3F;
     border-radius: 7px;
     width: 100%;
-    height: 70px;
+    height: 120px;
     margin-left: -60px;
     background-color: #efefef;
     display: grid;
@@ -849,7 +860,7 @@ html, body {
     grid-column: 1/-1;
     font-weight: 700;
     text-align: center;
-    margin-top: 10px;
+    margin-top: 25px;
 }
 .number{
     font-family: 'Quicksand', sans-serif;
@@ -910,6 +921,12 @@ html, body {
         grid-template-rows: 1fr;
         margin-bottom: -50px;
         margin-left: 120px;
+    }
+    .socme_holder_two{
+        grid-row: 2/3;
+        grid-template-rows: 1fr;
+        margin-bottom: -40px;
+        margin-left: 0;
     }
     .instagram_holder{
         grid-column: 1/2;
@@ -1515,6 +1532,14 @@ html, body {
         margin-bottom: -50px;
         margin-left: 120px;
     }
+    .socme_holder_two{
+        grid-row: 2/6;
+        grid-template-rows: 1fr;
+        margin-top: -12px;
+        margin-left: 239px;
+        grid-column: 2/-1;
+        display: flex;
+    }
     .red_box_bio{
         grid-column: 2/-4;
         height: 320px;
@@ -1534,6 +1559,7 @@ html, body {
         width: 100%;
         margin-top: -5px;
     }
+
     .rayhead{
         margin-left: -60px;
     }
@@ -1982,6 +2008,8 @@ html, body {
     }
     .email{
         font-size: 1.2em;
+        grid-column: 1/3;
+        margin-top: 45px;
     }
 
     .red_line_five{
