--- a/styles.css
+++ b/styles.css
@@ -2485,7 +2485,7 @@ html, body {
     background-color: #efefef;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 40px 100px 100px 1fr 100px 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 40px 100px 100px 1fr 1fr 100px 1fr 1fr 1fr 1fr 1fr;
 }
 .res_header_holder{
     grid-row: 2/4;
@@ -2526,7 +2526,7 @@ html, body {
     margin-left: 38px;
 }
 .knowledge_header {
-    grid-row: 4/5;
+    grid-row: 7/8;
     grid-column: 2/3;
     justify-self: start;
     font-family: 'righteous';
@@ -2538,7 +2538,7 @@ html, body {
 }
 
 .quals{
-    grid-row: 4/5;
+    grid-row: 7/8;
     grid-column: 2/-1;
     margin-top: 160px;
     display: flex;
@@ -2551,7 +2551,7 @@ html, body {
 .big_quals_box {
 
     grid-column: 2/-1;
-    grid-row: 4/5;
+    grid-row: 7/8;
     border: 15px solid #FF3B3F;
     z-index: 0;
     margin-top: 50px;
@@ -2633,29 +2633,40 @@ html, body {
 
 }
 .exp_header {
-    grid-row: 6/7;
+    grid-row: 5/6;
     grid-column: 2/3;
     justify-self: start;
     font-family: 'righteous';
     font-size: 4ex;
     margin-bottom: 0px;
     margin-left: 31px;
-    margin-top: 16px;
+    margin-top: 106px;
     z-index: 2;
 }
+.obj_header{
+        grid-row: 4/5;
+        grid-column: 2/3;
+        justify-self: start;
+        font-family: 'righteous';
+        font-size: 4ex;
+        margin-bottom: 0px;
+        margin-left: 31px;
+        margin-top: 127px;
+        z-index: 2;
+}
 .res_exp {
-    grid-row: 6/7;
+    grid-row: 5/6;
     grid-column: 2/-1;
-    margin-top: 50px;
+    margin-top: 140px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
     border: 15px solid #FF3B3F;
     margin-right: 10px;
-    border-radius: 15px;
+    border-radius: 35px;
+    padding-bottom: 60px;
 }
 .exp_box{
-    height: 200px;
+    
     grid-column: 1/-2;
     border: 6px solid #6bdef7;
     margin-left: 17px;
@@ -2672,14 +2683,45 @@ html, body {
 .exp_text{
     font-family: 'quicksand';
     font-size: 2ex;
-    font-weight: bolder;
+    /* font-weight: bolder; */
     margin-left: 10px;
+    margin-top: -20px;
+    line-height: 2;
+    text-indent: 30px;
 }
 .exp_connector{
         border-bottom: 6px solid #6bdef7;
         z-index: 4;
         margin-left: -15px;
         width: 13px;
+}
+.job_header{
+    font-family: 'quicksand';
+    font-size: 3ex;
+    font-weight: 900;
+    margin-top: -10px;
+    margin-left: 10px;
+}
+.objective {
+
+    grid-column: 2/8;
+    grid-row: 4/5;
+    border: 15px solid #FF3B3F;
+    margin-right: 10px;
+    border-radius: 35px;
+    margin-top: 160px;
+
+}
+.obj_box{
+    grid-column: 1/-2;
+    margin-left: 17px;
+    border-radius: 15px;
+    margin-top: 26px;
+}
+.port_link{
+    font-family: 'righteous';
+    grid-column: -2/-1;
+    grid-row: -2/-1;
 }
 /*font-family: 'Quicksand', sans-serif;
 font-family: 'Righteous', sans-serif;
