header font change

--- a/styles.css
+++ b/styles.css
@@ -2569,7 +2569,7 @@ html, body {
     grid-column: 1/4;
     justify-self: start;
     font-family: 'righteous';
-    font-size: 7ex;
+    font-size: 45px;
     margin-bottom: 0px;
     margin-left: 35px;
 }
