--- a/styles.css
+++ b/styles.css
@@ -1533,7 +1533,7 @@ margin-top: 3px;
         margin-top: 128px;
     }
 }
-@media only screen and (max-width: 2400px) and (min-width: 1200px)  {
+@media only screen and (min-width: 1200px)  {
 
     html, body {
         height:100%;
@@ -2170,7 +2170,7 @@ html, body {
     display: none;
 }
 .blue_box_bio{
-    width: 85%;
+    width: auto;
 }
 .red_box_bio{
     grid-column: 2/-4;
